custom login page

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,8 +7,10 @@
 <body>
 <h1>Hello in Board games World!</h1>
 <form action="/login" method="post">
+<!--    /login post to domyślny adres którego spodziewa się security-->
   <label>Add email (login)</label>
-  <input type="text" name="customerEmail">
+  <input type="text" name="username">
+<!--    username + password - to domyślne nazwy których spodziewa się security-->
   <br>
   <label>Add password</label>
   <input type="password" name="password">
